Included fabric js

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,13 @@ body {
     font-family: Arial, sans-serif;
 }
 
+.page__body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
 .canvas {
     height: 100vh;
     width: 100%;
