--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,12 @@ body {
     min-height: 100vh;
 }
 
-.canvas {
-    height: 100vh;
-    width: 100%;
+canvas {
+    -moz-user-select: none;
+    -o-user-select:none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    pointer-events: none;
 }
