--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,13 @@
 body {
     font-family: Arial, sans-serif;
 }
+
+canvas {
+    -moz-user-select: none;
+    -o-user-select:none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    pointer-events: none;
+}
